--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -23,84 +23,84 @@ jobs:
           go-version-file: 'go.mod'
       - uses: actions/setup-node@v3
       - run: npm install semver
-      - name: Create Draft Release
-        uses: actions/github-script@v6
-        id: release
-        with:
-          script: |
-            const semver = require('semver');
-            const ref = context.ref.split("/")[2]
-            const releases = (await github.rest.repos.listReleases({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              per_page: 100,
-            })).data
-            let latest_release
-            const latest_release_current_branch = releases.find(release => !release.draft && release.tag_name.startsWith("v" + ref.split("-")[1]))
-            if (latest_release_current_branch === undefined){
-              latest_release = (await github.rest.repos.getLatestRelease({
-                owner: context.payload.repository.owner.login,
-                repo: context.payload.repository.name,
-              })).data.tag_name
-            } else {
-              latest_release = latest_release_current_branch.tag_name
-            }
-            console.log(`The latest release was ${latest_release}`)
-            const temp_notes = (await github.rest.repos.generateReleaseNotes({
-                owner: context.payload.repository.owner.login,
-                repo: context.payload.repository.name,
-                tag_name: "next",
-                previous_tag_name: latest_release,
-                target_commitish: ref,
-            })).data.body
-            let level
-            temp_notes.includes("### 🚀 Features") ? level = 'minor' : level = 'patch'
-            temp_notes.includes("### 💣 Breaking Changes") ? level = 'major' : level = level
-            const version = semver.inc(latest_release, level)
-            console.log(`The level of the release is ${level}`)
-            const draft = releases.find((r) => r.draft && r.tag_name === "v"+version)
-            const draft_found = !(draft === undefined)
-            console.log(`The next version is v${version}`)
-            const footer = `
-              ## Resources
-              - Documentation -- https://docs.nginx.com/nginx-instance-manager/nginx-agent/
-              - Upgrade Steps -- https://docs.nginx.com/nginx-instance-manager/installation/upgrade-guide/#upgrade-nginx-agent
-            `
-            const release_notes = (await github.rest.repos.generateReleaseNotes({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              tag_name: 'v' + version,
-              previous_tag_name: latest_release,
-              target_commitish: ref,
-            }))
-            let release
-            if (draft_found){
-              console.log("Draft release already exists. Deleting current draft release and recreating it")
-              release = (await github.rest.repos.deleteRelease({
-                owner: context.payload.repository.owner.login,
-                repo: context.payload.repository.name,
-                release_id: draft.id,
-              }))
-            }
-            release = (await github.rest.repos.createRelease({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              tag_name: 'v' + version,
-              target_commitish: ref,
-              name: 'v' + version,
-              body: release_notes.data.body + footer,
-              draft: true,
-            }))
-            console.log(`Release created: ${release.data.html_url}`)
-            console.log(`Release ID: ${release.data.id}`)
-            console.log(`Release notes: ${release_notes.data.body}`)
-            console.log(`Release Upload URL: ${release.data.upload_url}`)
+      # - name: Create Draft Release
+        # uses: actions/github-script@v6
+        # id: release
+        # with:
+        #   script: |
+        #     const semver = require('semver');
+        #     const ref = context.ref.split("/")[2]
+        #     const releases = (await github.rest.repos.listReleases({
+        #       owner: context.payload.repository.owner.login,
+        #       repo: context.payload.repository.name,
+        #       per_page: 100,
+        #     })).data
+        #     let latest_release
+        #     const latest_release_current_branch = releases.find(release => !release.draft && release.tag_name.startsWith("v" + ref.split("-")[1]))
+        #     if (latest_release_current_branch === undefined){
+        #       latest_release = (await github.rest.repos.getLatestRelease({
+        #         owner: context.payload.repository.owner.login,
+        #         repo: context.payload.repository.name,
+        #       })).data.tag_name
+        #     } else {
+        #       latest_release = latest_release_current_branch.tag_name
+        #     }
+        #     console.log(`The latest release was ${latest_release}`)
+        #     const temp_notes = (await github.rest.repos.generateReleaseNotes({
+        #         owner: context.payload.repository.owner.login,
+        #         repo: context.payload.repository.name,
+        #         tag_name: "next",
+        #         previous_tag_name: latest_release,
+        #         target_commitish: ref,
+        #     })).data.body
+        #     let level
+        #     temp_notes.includes("### 🚀 Features") ? level = 'minor' : level = 'patch'
+        #     temp_notes.includes("### 💣 Breaking Changes") ? level = 'major' : level = level
+        #     const version = semver.inc(latest_release, level)
+        #     console.log(`The level of the release is ${level}`)
+        #     const draft = releases.find((r) => r.draft && r.tag_name === "v"+version)
+        #     const draft_found = !(draft === undefined)
+        #     console.log(`The next version is v${version}`)
+        #     const footer = `
+        #       ## Resources
+        #       - Documentation -- https://docs.nginx.com/nginx-instance-manager/nginx-agent/
+        #       - Upgrade Steps -- https://docs.nginx.com/nginx-instance-manager/installation/upgrade-guide/#upgrade-nginx-agent
+        #     `
+        #     const release_notes = (await github.rest.repos.generateReleaseNotes({
+        #       owner: context.payload.repository.owner.login,
+        #       repo: context.payload.repository.name,
+        #       tag_name: 'v' + version,
+        #       previous_tag_name: latest_release,
+        #       target_commitish: ref,
+        #     }))
+        #     let release
+        #     if (draft_found){
+        #       console.log("Draft release already exists. Deleting current draft release and recreating it")
+        #       release = (await github.rest.repos.deleteRelease({
+        #         owner: context.payload.repository.owner.login,
+        #         repo: context.payload.repository.name,
+        #         release_id: draft.id,
+        #       }))
+        #     }
+        #     release = (await github.rest.repos.createRelease({
+        #       owner: context.payload.repository.owner.login,
+        #       repo: context.payload.repository.name,
+        #       tag_name: 'v' + version,
+        #       target_commitish: ref,
+        #       name: 'v' + version,
+        #       body: release_notes.data.body + footer,
+        #       draft: true,
+        #     }))
+        #     console.log(`Release created: ${release.data.html_url}`)
+        #     console.log(`Release ID: ${release.data.id}`)
+        #     console.log(`Release notes: ${release_notes.data.body}`)
+        #     console.log(`Release Upload URL: ${release.data.upload_url}`)
             
-            return {
-                version: version,
-                release_id: release.data.id,
-                release_upload_url: release.data.upload_url,
-            }
+        #     return {
+        #         version: version,
+        #         release_id: release.data.id,
+        #         release_upload_url: release.data.upload_url,
+        #     }
       - name: Set Environment Variables
         run: |
           echo "${{steps.release.outputs.result}}"
