--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -173,7 +173,7 @@ jobs:
           tag_name="${GITHUB_REF##*/}"
           mkdir -p build/deb build/rpm
           touch build/deb/nginx-agent_2.20.0~bionic_arm64.deb; touch build/rpm/nginx-agent-2.20.0.el9.ngx.x86_64.rpm; touch build/nginx-agent-2.19.0-SNAPSHOT-3c536cb.deb; touch build/nginx-agent.tgz; touch build/nginx-agent.rpm
-          hub release edit $(find . -type f \( -name "*.deb" -o -name "*.rpm" -o -name "*.pkg" -o -name "*.txz" -o -name "*.apk" \) -printf "-a %p\n") -m "" "$tag_name"
+          hub release edit $(find . -type f \( -name "*.deb" -o -name "*.rpm" -o -name "*.pkg" -o -name "*.txz" -o -name "*.apk" \) -printf "-a %p\n") -m "" "v${{env.VERSION}}"
       # - name: Publish Release Packages
       #   if: ${{ inputs.publishPackages == true }}
       #   env:
