--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -166,14 +166,14 @@ jobs:
       #   run: |
       #     az logout
       #   if: always()
-      - name: Upload
+      - name: Upload Release Assets
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # clobber overwrites existing assets of the same name
         run: |
-          tag_name="${GITHUB_REF##*/}"
-          mkdir -p build/deb build/rpm
-          touch build/deb/nginx-agent_2.20.0~bionic_arm64.deb; touch build/rpm/nginx-agent-2.20.0.el9.ngx.x86_64.rpm; touch build/nginx-agent-2.19.0-SNAPSHOT-3c536cb.deb; touch build/nginx-agent.tgz; touch build/nginx-agent.rpm
-          hub release edit $(find . -type f \( -name "*.deb" -o -name "*.rpm" -o -name "*.pkg" -o -name "*.txz" -o -name "*.apk" \) -printf "-a %p\n") -m "" "v0.0.5"
+          make clean; make local-apk-package; make local-deb-package; make local-rpm-package; make local-txz-package
+          gh release upload --clobber v${{env.VERSION}} \
+            $(find ./build -type f \( -name "*.deb" -o -name "*.rpm" -o -name "*.pkg" -o -name "*.txz" -o -name "*.apk" \))
       # - name: Publish Release Packages
       #   if: ${{ inputs.publishPackages == true }}
       #   env:
