--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -171,7 +171,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # clobber overwrites existing assets of the same name
         run: |
-          make clean; make local-apk-package; make local-deb-package; make local-rpm-package; make local-txz-package
+          make build-txz-packager-docker && make clean; make local-apk-package; make local-deb-package; make local-rpm-package; make local-txz-package
           gh release upload --clobber v${{env.VERSION}} \
             $(find ./build -type f \( -name "*.deb" -o -name "*.rpm" -o -name "*.pkg" -o -name "*.txz" -o -name "*.apk" \))
       # - name: Publish Release Packages
