--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -171,7 +171,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # clobber overwrites existing assets of the same name
         run: |
-          make build-txz-packager-docker && make clean; make local-apk-package; make local-deb-package; make local-rpm-package; make local-txz-package
+          mkdir -p build/deb build/rpm
+          touch build/deb/nginx-agent_2.20.0~bionic_arm64.deb; touch build/rpm/nginx-agent-2.20.0.el9.ngx.x86_64.rpm; touch build/nginx-agent-2.19.0-SNAPSHOT-3c536cb.deb; touch build/nginx-agent.tgz; touch build/nginx-agent.rpm
           gh release upload --clobber v${{env.VERSION}} \
             $(find ./build -type f \( -name "*.deb" -o -name "*.rpm" -o -name "*.pkg" -o -name "*.txz" -o -name "*.apk" \))
       # - name: Publish Release Packages
